# idahelper

./: .gitignore  LICENSE  README.md  pyproject.toml  vermin.ini
.github/workflows/: base.yaml  pypi.yaml
src/idahelper/: _utils.py  comments.py  cpp.py  file_format.py  functions.py  instructions.py  memory.py  objc.py  pac.py  segments.py  strings.py  tif.py  widgets.py  xrefs.py
src/idahelper/ast/: cexpr.py  cfunc.py  cinsn.py  lvars.py
src/idahelper/microcode/: mba.py  mblock.py  mcallarg.py  minsn.py  mop.py  mreg.py  optimizers.py  visitors.py
src/idahelper/pac/: __init__.py  local_pac_client.py  pac_interface.py  remote_pac_client.py
src/idahelper/pac/pacxplorer/: __init__.py  pac_client.py
src/idahelper/pac/pacxplorerng/: __init__.py  definitions.py  pac_client.py
