[project]
name = "idahelper"
version = "1.0.0"
description = "standard library for IDA Pro plugins"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
pac = [
    "ida-netnode>=3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

 [tool.hatch.build.targets.wheel]
      packages = ["src/idahelper"]

[dependency-groups]
dev = [
    "ruff>=0.12.1",
]

[tool.ruff]
target-version = "py310"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E",
    "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
    # Asserts
    "S101",
    # Name for classes
    "N801",
    # blanket noqa
    "PGH004",
    # Custom error classes
    "TRY003"
]

[tool.ruff.format]
preview = true
